Fix for this: http://redmine.pfsense.org/issues/2037 Just changed some padding/margin in the CSS in order to avoid wrapping the menu. Tested with Firefox 8, Chrome 15.0.874.121 and IE 9.

--- a/usr/local/www/themes/the_wall/all.css
+++ b/usr/local/www/themes/the_wall/all.css
@@ -445,8 +445,8 @@ table#marquee div#container div#scroller {
 /* textcolor in dropdownmenu */
 #navigation li li a {
 	display: block;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 5px;
+	margin-right: 10px;
 	color: #000000;
 }
 /* textcolor mouseover in dropdownmenu */
